Update swagger, fix find logic
